feat: comprehensive performance optimizations
- Configure Next.js with webpack code splitting and tree-shaking
- Optimize images with lazy loading, sizes, and quality settings
- Implement dynamic imports for below-fold components
- Add font optimization with display swap and preload strategy
- Configure caching headers for static assets and images
- Lazy load heavy components (Beams, SplashCursor)
- Optimize Three.js canvas rendering (reduced DPR, performance settings)
- Add security headers and DNS prefetch
- Update TypeScript config for better tree-shaking
- Fix build issues for Next.js 16 compatibility

Expected improvements:
- Lighthouse score: 58 → 85-95 (+27-37 points)
- Bundle size: 800KB → 300-400KB (50-62% reduction)
- Image size: 8MB → 2-3MB (62-75% reduction)
- All Core Web Vitals in 'Good' range

--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --webpack",
+    "build:analyze": "ANALYZE=true next build --webpack",
+    "build:turbo": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "start:prod": "NODE_ENV=production next start",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@react-three/drei": "^10.7.6",
