--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
     "@tabler/icons-react": "^3.35.0",
@@ -19,12 +20,14 @@
     "motion": "^12.23.24",
     "next": "16.0.1",
     "postcss": "^8.5.6",
+    "postprocessing": "^6.38.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "tabler": "^1.0.0",
     "tailwind-merge": "^3.3.1",
-    "three": "^0.181.0"
+    "three": "^0.181.1",
+    "nodemailer": "^6.9.15"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
