--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.5.0",
     "tabler": "^1.0.0",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.181.1"
   },
   "devDependencies": {
