--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.552.0",
     "motion": "^12.23.24",
     "next": "16.0.1",
+    "nextjs-toast-notify": "^1.57.0",
     "nodemailer": "^6.10.1",
     "postcss": "^8.5.6",
     "postprocessing": "^6.38.0",
