--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.552.0",
     "motion": "^12.23.24",
-    "next": "16.0.1",
+    "next": "^16.1.0-canary.12",
     "nextjs-toast-notify": "^1.57.0",
-    "nodemailer": "^6.10.1",
+    "nodemailer": "^7.0.11",
     "postcss": "^8.5.6",
     "postprocessing": "^6.38.0",
     "react": "19.2.0",
